# itis-assignment

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MAIL_EXAMPLE.md  README.md  pyproject.toml  report.html  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: report.yml  tests.yml
data/: sample_students.csv
scripts/: generate_report.py
src/perfanalysis/: analyzer.py  report.py
tests/: test_analyzer.py  test_report.py
